Changelog for Poi
=================


1.2.2 (unreleased)
------------------

- Fixed html validation error that has been around since Christmas
  2005!  Spotted by Bill Freeman.  [maurits]

- Update french translation.  [kdeldycke]


1.2.1 (2009-03-09)
------------------

- When sending an email about changes to an issue, translate those
  changes, as some of them are workflow changes, which can be
  translated.  [maurits]

- Use the global translation service to translate the text that is
  added as status message.  [maurits]

- Made it possible to translate the email messages.  Fixes
  http://plone.org/products/poi/issues/209
  [maurits]


1.2 (2009-02-23)
----------------

- In the migration from old to new style responses, also migrate the
  attachments to the responses.  [maurits]

- Added default_methods for the area and issueType fields of an issue.
  If the vocabulary of the field has only one value, we select that
  one.  See http://plone.org/products/poi/issues/202 [maurits]

- Removed poi_email_* dtml pages from the skins directory, in favour
  of templates in events.py.
  Fixes http://plone.org/products/poi/issues/206 [maurits]

- Fixed 'Field missing error' from kss (only visible in the logs).
  [maurits]

- Fixed possible in rich text field widget by now giving the number of
  rows as an integer instead of a string.
  Fixes http://plone.org/products/poi/issues/203
  [maurits]

- Migrations: now doing intermediate transaction commits to give the
  migrations a chance to finish on big sites.  [maurits]

- Fixed UnicodeError in email sending.
  Fixes http://plone.org/products/poi/issues/198
  Thanks to Derek Broughton for the first version of this fix.
  [maurits]

- Added Portuguese translations by Nuno Cruz.  Thanks!  [maurits]

- After creating a response, first check if emails need to be sent
  before figuring out the text to send.  [maurits]

- In migrations guard against outdated catalog items that have no